@startuml
' Strategy Pattern adapted to the refactored backend implementation.
' Suggested LaTeX placement: normal page.

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho

class "SeparationEngine" as SeparationEngine <<Context>> {
  -algorithm : SeparationAlgorithm
  +separate(...)
}

interface SeparationAlgorithm <<Strategy>> {
  +separate(...)
}

class NeoSSNetStrategy <<ConcreteStrategy>> {
  +separate(...)
}

SeparationEngine --> SeparationAlgorithm : delegates separation
NeoSSNetStrategy ..|> SeparationAlgorithm

@enduml
